# generative-ensemble-bias-variance-decomposition

./: README.md  download_ACS_2018.ipynb  pyproject.toml  random-forest-mse-prediction.ipynb
lib/: experiment_config.py  util.py
lib/aim/: aim.py  cdp2adp.py  matrix.py  mechanism.py
plotting/: classification_plots.ipynb  dp_experiment.ipynb  preliminary_plots.ipynb  regression_plots.ipynb  variance_estimation_plots.ipynb
workflow/: Snakefile
workflow/rules/: classification_datasets.smk  dp_experiment.smk  preliminary_nondp.smk  regression_datasets.smk
workflow/scripts/: aggregate_results.py  synthetic_data.py  train_test_split.py  variance_estimation.py
workflow/scripts/classification-datasets/: ensemble_learning.py  learning.py  real_data_results.py  synthpop.R
workflow/scripts/dp-experiment/: ensemble_learning.py  learning.py  non_split_generator.py  non_split_synthetic_data.py  split_synthetic_data.py
workflow/scripts/preliminary_nondp/: learning.py  real_data_results.py  synthetic_data.py  synthpop.R  train_test_split.py
workflow/scripts/regression-datasets/: ensemble_learning.py  learning.py  one_large_learning.py  real_data_results.py  synthpop.R
