[tool.poetry]
name = "generative-ensemble-bias-variance-decomposition"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "<1.24.0"
scipy = "^1.11.2"
pandas = "<2.0.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
scikit-learn = "^1.3.0"
ipywidgets = "^8.1.0"
jupyter = "^1.0.0"
tqdm = "^4.66.1"
torch = "<2.0.0"
einops = "^0.6.1"
snakemake = "^7.32.3"
pulp = "2.7.0" # Fix snakemake bug
synthcity = "^0.2.9"
folktables = "^0.0.12"
private-pgm = {git = "https://github.com/ryan112358/private-pgm.git"}
disjoint-set = "^0.7.4" # Needed by private-pgm
autodp = "0.2" # Needed for AIM
jax = "0.4.14"
jaxlib = "0.4.14"
numpyro = "0.11.0"
twinify = "^2.0.0"
tueplots = "^0.0.15"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
